--- a/M08_UF5/Paginas_Web/Index.html
+++ b/M08_UF5/Paginas_Web/Index.html
@@ -5,7 +5,7 @@
 -->
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Exercici_UF5_2</title>
+        <title>Index</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -16,7 +16,9 @@
      <li><a href="../../M08_UF5/Paginas_Web/Exercici2.html"> Exercici2</a></li>
      <li><a href="../../M08_UF5/Paginas_Web/Exercici3.html"> Exercici3</a></li>
      <li><a href="../../M08_UF5/Paginas_Web/Links_Interesantes.html"> Links interesantes</a></li>
-     <img src="../../M08_UF5/Imagenes/4.PNG" alt="Comprobacion"/>
+     <li><a href="../../M08_UF5/Paginas_Web/Calendario.html"> Calendario</a></li>
     </ul>
+    <p>Comprobacion</p>
+    <p><img src="../../M08_UF5/Imagenes/Comprobante.PNG" alt="Comprobacion"/></p>
     </body>
 </html>
