--- a/M08_UF5/Paginas_Web/Index.html
+++ b/M08_UF5/Paginas_Web/Index.html
@@ -17,6 +17,10 @@
      <li><a href="../../M08_UF5/Paginas_Web/Exercici3.html"> Exercici3</a></li>
      <li><a href="../../M08_UF5/Paginas_Web/Links_Interesantes.html"> Links interesantes</a></li>
      <li><a href="../../M08_UF5/Paginas_Web/Calendario.html"> Calendario</a></li>
+     <li><a href="../../M08_UF5/Imagenes/Juego.PNG">Juego</a></li>   
+     <li><a href="../../M08_UF5/Paginas_Web/Flotant_pixels.html"></a></li>
+     <li><a href="../../M08_UF5/Paginas_Web/ExerciciCss3.html">Css3</a></li>
+     <li><a href="../../M08_UF5/Paginas_Web/Esqueleto.html">Esqueleto</a></li>
     </ul>
     <p>Comprobacion</p>
     <p><img src="../../M08_UF5/Imagenes/Comprobante.PNG" alt="Comprobacion"/></p>
