--- a/M08_UF5/Paginas_Web/Index.html
+++ b/M08_UF5/Paginas_Web/Index.html
@@ -5,24 +5,32 @@
 -->
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Index</title>
+        <title>SMX M08</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-    <h1>MENÚ</h1>
-    <ul>
-     <li><a href="../../M08_UF5/Paginas_Web/Exercici1.html"> Exercici1</a></li>
-     <li><a href="../../M08_UF5/Paginas_Web/Exercici2.html"> Exercici2</a></li>
-     <li><a href="../../M08_UF5/Paginas_Web/Exercici3.html"> Exercici3</a></li>
-     <li><a href="../../M08_UF5/Paginas_Web/Links_Interesantes.html"> Links interesantes</a></li>
-     <li><a href="../../M08_UF5/Paginas_Web/Calendario.html"> Calendario</a></li>
-     <li><a href="../../M08_UF5/Imagenes/Juego.PNG">Juego</a></li>   
-     <li><a href="../../M08_UF5/Paginas_Web/Flotant_pixels.html"></a></li>
-     <li><a href="../../M08_UF5/Paginas_Web/ExerciciCss3.html">Css3</a></li>
-     <li><a href="../../M08_UF5/Paginas_Web/Esqueleto.html">Esqueleto</a></li>
-    </ul>
-    <p>Comprobacion</p>
-    <p><img src="../../M08_UF5/Imagenes/Comprobante.PNG" alt="Comprobacion"/></p>
+        <h1>Indice</h1>
+        
+        
+        <h2>Indice ejercicios</h2>
+
+        <ul>
+        <li><a href="exercici1.html"> Basic</a></li>
+        <li><a href="exercici2.html"> Pagina 2</a></li>
+        <li><a href="exercici3.html"> Pagina 3</a></li>
+        <li><a href="Calendario.html"> Calendario</a></li>
+        <li><a href="../Imagenes/Juego.PNG">Juego</a></li>
+        <li><a href="Esqueleto.html"> Esqueleto</a></li>
+        <li><a href="Exercici_llista_ordenada.html"> Lista ordenada</a></li>
+        <li><a href="ExerciciCss3.html"> Css3</a></li>
+        <li><a href="exercicio_columnas.html"> ejercicio columnas</a></li>
+        <li><a href="Flotant_pixels.html"> Flotant pixels</a></li>
+        <li><a href="Clase_Nueva.html"> Clase nueva columnas</a></li>
+        <li><a href="Links_Interesantes.html"> Link interesantes</a></li>
+        <li><a href="Personajes.html"> Personajes</a></li>
+        <li><a href="Template.html"> Templates</a></li>
+        <li><a href="pagines_boostrap/pagina_con_boostrap.html"> Boostrap</a></li>
+
     </body>
 </html>
